feat: add source as table
